docs-archive/apache-airflow-providers-openlineage/2.15.0/_sources/_api/airflow/providers/openlineage/utils/utils/index.rst.txt
airflow.providers.openlineage.utils.utils
=========================================

.. py:module:: airflow.providers.openlineage.utils.utils


Attributes
----------

.. autoapisummary::

   airflow.providers.openlineage.utils.utils.AnyOperator
   airflow.providers.openlineage.utils.utils.log


Classes
-------

.. autoapisummary::

   airflow.providers.openlineage.utils.utils.InfoJsonEncodable
   airflow.providers.openlineage.utils.utils.DagInfo
   airflow.providers.openlineage.utils.utils.DagRunInfo
   airflow.providers.openlineage.utils.utils.TaskInstanceInfo
   airflow.providers.openlineage.utils.utils.AssetInfo
   airflow.providers.openlineage.utils.utils.TaskInfo
   airflow.providers.openlineage.utils.utils.TaskInfoComplete
   airflow.providers.openlineage.utils.utils.TaskGroupInfo
   airflow.providers.openlineage.utils.utils.OpenLineageRedactor


Functions
---------

.. autoapisummary::

   airflow.providers.openlineage.utils.utils.try_import_from_string
   airflow.providers.openlineage.utils.utils.get_operator_class
   airflow.providers.openlineage.utils.utils.get_operator_provider_version
   airflow.providers.openlineage.utils.utils.get_job_name
   airflow.providers.openlineage.utils.utils.get_task_parent_run_facet
   airflow.providers.openlineage.utils.utils.get_root_information_from_dagrun_conf
   airflow.providers.openlineage.utils.utils.get_parent_information_from_dagrun_conf
   airflow.providers.openlineage.utils.utils.get_dag_parent_run_facet
   airflow.providers.openlineage.utils.utils.get_task_documentation
   airflow.providers.openlineage.utils.utils.get_dag_documentation
   airflow.providers.openlineage.utils.utils.get_airflow_mapped_task_facet
   airflow.providers.openlineage.utils.utils.get_user_provided_run_facets
   airflow.providers.openlineage.utils.utils.get_fully_qualified_class_name
   airflow.providers.openlineage.utils.utils.is_operator_disabled
   airflow.providers.openlineage.utils.utils.is_selective_lineage_enabled
   airflow.providers.openlineage.utils.utils.is_ti_rescheduled_already
   airflow.providers.openlineage.utils.utils.safe_getattr
   airflow.providers.openlineage.utils.utils.get_airflow_dag_run_facet
   airflow.providers.openlineage.utils.utils.get_processing_engine_facet
   airflow.providers.openlineage.utils.utils.get_airflow_debug_facet
   airflow.providers.openlineage.utils.utils.get_airflow_run_facet
   airflow.providers.openlineage.utils.utils.get_airflow_job_facet
   airflow.providers.openlineage.utils.utils.get_airflow_state_run_facet
   airflow.providers.openlineage.utils.utils.is_dag_run_asset_triggered
   airflow.providers.openlineage.utils.utils.build_task_instance_ol_run_id
   airflow.providers.openlineage.utils.utils.is_valid_uuid
   airflow.providers.openlineage.utils.utils.build_dag_run_ol_run_id
   airflow.providers.openlineage.utils.utils.get_dag_job_dependency_facet
   airflow.providers.openlineage.utils.utils.get_unknown_source_attribute_run_facet
   airflow.providers.openlineage.utils.utils.is_json_serializable
   airflow.providers.openlineage.utils.utils.print_warning
   airflow.providers.openlineage.utils.utils.get_filtered_unknown_operator_keys
   airflow.providers.openlineage.utils.utils.should_use_external_connection
   airflow.providers.openlineage.utils.utils.translate_airflow_asset


Module Contents
---------------

.. py:type:: AnyOperator
   :canonical: BaseOperator | MappedOperator | SerializedBaseOperator | SerializedMappedOperator


.. py:data:: log

.. py:function:: try_import_from_string(string)

.. py:function:: get_operator_class(task)

.. py:function:: get_operator_provider_version(operator)

   Get the provider package version for the given operator.


.. py:function:: get_job_name(task)

.. py:function:: get_task_parent_run_facet(parent_run_id, parent_job_name, parent_job_namespace = conf.namespace(), root_parent_run_id = None, root_parent_job_name = None, root_parent_job_namespace = None, dr_conf = None)

   Retrieve the parent run facet.


.. py:function:: get_root_information_from_dagrun_conf(dr_conf)

   Extract root parent run and job information from a DAG run config.


.. py:function:: get_parent_information_from_dagrun_conf(dr_conf)

   Extract parent run and job information from a DAG run config.


.. py:function:: get_dag_parent_run_facet(dr_conf)

   Build the OpenLineage parent run facet from a DAG run configuration.

   This function extracts parent run identifiers - run ID, job namespace, and job name -
   from the DAG run configuration to construct an OpenLineage `ParentRunFacet`. It requires
   a complete set of parent identifiers to proceed; if some but not all are present, or if
   the run ID is invalid, the function returns an empty dictionary.

   When valid parent identifiers are found, it also attempts to retrieve corresponding
   root identifiers using `get_root_information_from_dagrun_conf`, which may fall back
   to the parent identifiers if no explicit root data is available. The resulting facet
   links both the immediate parent and root lineage information for the run.

   Args:
       dr_conf: The DAG run configuration dictionary.

   Returns:
       A dictionary containing a single entry mapping the facet name to the constructed
       `ParentRunFacet`. Returns an empty dictionary if the configuration does not contain
       a complete or valid set of parent identifiers.


.. py:function:: get_task_documentation(operator)

   Get task documentation and mime type, truncated to _MAX_DOC_BYTES bytes length, if present.


.. py:function:: get_dag_documentation(dag)

   Get dag documentation and mime type, truncated to _MAX_DOC_BYTES bytes length, if present.


.. py:function:: get_airflow_mapped_task_facet(task_instance)

.. py:function:: get_user_provided_run_facets(ti, ti_state)

.. py:function:: get_fully_qualified_class_name(operator)

.. py:function:: is_operator_disabled(operator)

.. py:function:: is_selective_lineage_enabled(obj)

   If selective enable is active check if DAG or Task is enabled to emit events.


.. py:function:: is_ti_rescheduled_already(ti, session=NEW_SESSION)

.. py:function:: safe_getattr(obj, attr, default = None)

   Get attribute from object, returning default if DetachedInstanceError is raised.


.. py:class:: InfoJsonEncodable(obj)

   Bases: :py:obj:`dict`


   Airflow objects might not be json-encodable overall.

   The class provides additional attributes to control
   what and how is encoded:

   * renames: a dictionary of attribute name changes
   * | casts: a dictionary consisting of attribute names
     | and corresponding methods that should change
     | object value
   * includes: list of attributes to be included in encoding
   * excludes: list of attributes to be excluded from encoding

   Don't use both includes and excludes.


   .. py:attribute:: renames
      :type:  dict[str, str]


   .. py:attribute:: casts
      :type:  dict[str, Any]


   .. py:attribute:: includes
      :type:  list[str]
      :value: []



   .. py:attribute:: excludes
      :type:  list[str]
      :value: []



   .. py:attribute:: obj


.. py:class:: DagInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding DAG object to JSON.


   .. py:attribute:: includes
      :value: ['dag_id', 'description', 'fileloc', 'owner', 'owner_links', 'schedule_interval', 'start_date', 'tags']



   .. py:attribute:: casts


   .. py:attribute:: renames


   .. py:method:: timetable_summary(dag)
      :classmethod:


      Extract summary from timetable if missing a ``timetable_summary`` property.



   .. py:method:: serialize_timetable(dag)
      :classmethod:



.. py:class:: DagRunInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding DagRun object to JSON.


   .. py:attribute:: includes
      :value: ['clear_number', 'conf', 'dag_id', 'data_interval_end', 'data_interval_start', 'end_date',...



   .. py:attribute:: casts


   .. py:method:: duration(dagrun)
      :classmethod:



   .. py:method:: deadlines(dagrun)
      :classmethod:


      Extract deadline state and alert definitions from a DagRun (on scheduler).

      Returns a dict (not a list) so _cast_basic_types passes it through.



   .. py:method:: dag_version_info(dagrun, key)
      :classmethod:


      Extract deg version info for given key, sourced from DagRun (on scheduler).



.. py:class:: TaskInstanceInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding TaskInstance object to JSON.


   .. py:attribute:: includes
      :value: ['duration', 'try_number', 'pool', 'queued_dttm', 'log_url']



   .. py:attribute:: casts


.. py:class:: AssetInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding Airflow Asset object to JSON.


   .. py:attribute:: includes
      :value: ['uri', 'extra']



.. py:class:: TaskInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding BaseOperator/AbstractOperator object to JSON.


   .. py:attribute:: renames


   .. py:attribute:: includes
      :value: ['deferrable', 'depends_on_past', 'downstream_task_ids', 'execution_timeout', 'executor_config',...



   .. py:attribute:: casts


.. py:class:: TaskInfoComplete(obj)

   Bases: :py:obj:`TaskInfo`


   Defines encoding BaseOperator/AbstractOperator object to JSON used when user enables full task info.


   .. py:attribute:: includes
      :value: []



   .. py:attribute:: excludes
      :value: ['_BaseOperator__instantiated', '_dag', '_hook', '_log', '_outlets', '_inlets',...



.. py:class:: TaskGroupInfo(obj)

   Bases: :py:obj:`InfoJsonEncodable`


   Defines encoding TaskGroup object to JSON.


   .. py:attribute:: renames


   .. py:attribute:: includes
      :value: ['downstream_group_ids', 'downstream_task_ids', 'prefix_group_id', 'tooltip',...



.. py:function:: get_airflow_dag_run_facet(dag_run)

.. py:function:: get_processing_engine_facet()

.. py:function:: get_airflow_debug_facet()

.. py:function:: get_airflow_run_facet(dag_run, dag, task_instance, task, task_uuid)

.. py:function:: get_airflow_job_facet(dag_run)

.. py:function:: get_airflow_state_run_facet(dag_id, run_id, task_ids, dag_run_state)

.. py:function:: is_dag_run_asset_triggered(dag_run)

   Return whether the given DAG run was triggered by an asset.


.. py:function:: build_task_instance_ol_run_id(dag_id, task_id, try_number, logical_date, map_index)

   Generate a deterministic OpenLineage run ID for a task instance.

   Args:
       dag_id: The DAG identifier.
       task_id: The task identifier.
       try_number: The task try number.
       logical_date: The logical execution date from dagrun.
       map_index: The task map index.

   Returns:
       A deterministic OpenLineage run ID for the task instance.


.. py:function:: is_valid_uuid(uuid_string)

   Validate that a string is a valid UUID format.


.. py:function:: build_dag_run_ol_run_id(dag_id, logical_date, clear_number)

   Generate a deterministic OpenLineage run ID for a DAG run.

   Args:
       dag_id: The DAG identifier.
       logical_date: The logical execution date.
       clear_number: The DAG run clear number.

   Returns:
       A deterministic OpenLineage run ID for the DAG run.


.. py:function:: get_dag_job_dependency_facet(dag_id, dag_run_id)

   Safely retrieve the asset-triggered job dependency facet for a DagRun.

   This function collects information about the asset events that triggered the specified DagRun,
   including details about the originating DAG runs and task instances. If the DagRun was not triggered
   by assets, or if any error occurs during lookup or processing, the function logs the error and returns
   an empty dictionary. This guarantees that facet generation never raises exceptions and does not
   interfere with event emission processes.

   Args:
       dag_id: The DAG identifier.
       dag_run_id: The DagRun identifier.

   Returns:
       A dictionary with JobDependenciesRunFacet, or an empty dictionary
       if the DagRun was not asset-triggered or if an error occurs.


.. py:function:: get_unknown_source_attribute_run_facet(task, name = None)

.. py:class:: OpenLineageRedactor

   Bases: :py:obj:`airflow.sdk.execution_time.secrets_masker.SecretsMasker`


   This class redacts sensitive data similar to SecretsMasker in Airflow logs.

   The difference is that our default max recursion depth is way higher - due to
   the structure of OL events we need more depth.
   Additionally, we allow data structures to specify data that needs not to be
   redacted by specifying _skip_redact list by deriving RedactMixin.


   .. py:method:: from_masker(other)
      :classmethod:



.. py:function:: is_json_serializable(item)

.. py:function:: print_warning(log)

.. py:function:: get_filtered_unknown_operator_keys(operator)

.. py:function:: should_use_external_connection(hook)

.. py:function:: translate_airflow_asset(asset, lineage_context)

   Convert an Asset with an AIP-60 compliant URI to an OpenLineageDataset.

   This function returns None if no URI normalizer is defined, no asset converter is found or
   some core Airflow changes are missing and ImportError is raised.


